OnboardingV2Minimal/force-app/main/default/objects/Interview__c/Interview__c.object-meta.xml
<CustomObject>
    <label>Interview</label>
    <nameField>
        <displayFormat>INTV-{00000}</displayFormat>
        <label>Interview Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>